--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -52,4 +52,22 @@ header {
         font-size: 1.5rem;
         cursor: pointer;
     }
+
+    #mobile-menu.active {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #mobile-nav-list {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+        margin: 12px 0px;
+    }
+
+    #mobile-nav-list .nav-item {
+        list-style: none;
+        text-align: center;
+    }
 }
