--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -63,4 +63,18 @@
     flex-wrap: wrap;
     justify-content: center;
   }
+
+  .dish {
+    width: calc(50% - 12px);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .dish {
+    width: 100%;
+  }
+
+  #menu .section-subtitle {
+    text-align: center;
+  }
 }
