--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -12,7 +12,7 @@
 }
 
 #testimonials .section-subtitle {
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 #testimonials_content {
@@ -51,4 +51,40 @@
 
 .feedback-content p span {
   color: #e9a209;
+}
+
+@media screen and (max-width: 1170px) {
+  #testimonials {
+    flex-direction: column;
+  }
+
+  #testimonials .section-subtitle {
+    text-align: center;
+    font-size: 2.5rem;
+  }
+
+  #testimonials_chef {
+    display: none;
+  }
+
+  #testimonials_content {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #testimonials .section-subtitle {
+    font-size: 2rem;
+  }
+
+  #testimonials_content {
+    width: 100%;
+  }
+
+  .feedback {
+    flex-direction: column;
+  }
 }
