--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,100 +1,100 @@
 #home {
-    display: flex;
-    min-height: calc(100vh - 92.36px);
-    position: relative;
+  display: flex;
+  min-height: calc(100vh - 92.36px);
+  position: relative;
 }
 
 #cta {
-    width: 35%;
-    display: flex;
-    flex-direction: column;
-    gap: 28px;
-    margin-top: 5%;
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  margin-top: 5%;
 }
 
 #cta .tittle {
-    font-size: 4rem;
-    color: #1d1d1d;
+  font-size: 4rem;
+  color: var(color-neutral-1);
 }
 
 #cta .tittle span {
-    color: #e9a209;
+  color: var(--color-primary-6);
 }
 
 #cta .description {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 #cta_buttons {
-    display: flex;
-    gap: 24px;
+  display: flex;
+  gap: 24px;
 }
 
 #cta_buttons a {
-    text-decoration: none;
-    color: #1d1d1d;
+  text-decoration: none;
+  color: var(color-neutral-1);
 }
 
 #phone_button {
-    display: flex;
-    gap: 8px;
-    align-items: center;
-    background-color: #ffffff;
-    padding: 8px 14px;
-    font-weight: 500;
-    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0,1);
-    border-radius: 12px;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  background-color: var(--color-neutral-0);
+  padding: 8px 14px;
+  font-weight: 500;
+  box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0, 1);
+  border-radius: 12px;
 }
 
 #phone_button button {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 #banner {
-    display: flex;
-    align-items: start;
-    justify-content: end;
-    width: 70%;
-    z-index: 2;
+  display: flex;
+  align-items: start;
+  justify-content: end;
+  width: 70%;
+  z-index: 2;
 }
 
 #banner img {
-    height: 92%;
-    width: fit-content;
+  height: 92%;
+  width: fit-content;
 }
 
 .shape {
-    background-color: #ffe8b4;
-    width: 44%;
-    height: 100%;
-    position: absolute;
-    border-radius: 40% 30% 0% 20%;
-    top: 0;
-    right: 0;
-    z-index: 1;
+  background-color: var(--color-primary-2);
+  width: 44%;
+  height: 100%;
+  position: absolute;
+  border-radius: 40% 30% 0% 20%;
+  top: 0;
+  right: 0;
+  z-index: 1;
 }
 
 @media screen and (max-width: 1170px) {
-    #home {
-        min-height: 100%;
-        padding-top: 0px;
-    }
+  #home {
+    min-height: 100%;
+    padding-top: 0px;
+  }
 
-    #banner,
-    #banner img,
-    #home .shape {
-        display: none;
-    }
+  #banner,
+  #banner img,
+  #home .shape {
+    display: none;
+  }
 
-    #cta{
-        width: 100%;
-        text-align: center;
-        align-items: center;
-    }
+  #cta {
+    width: 100%;
+    text-align: center;
+    align-items: center;
+  }
 }
 
 @media screen and (max-width: 450px) {
-    #phone_button button {
-        display: none;
-    }
+  #phone_button button {
+    display: none;
+  }
 }
