--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -32,7 +32,7 @@ header {
 }
 
 .nav-item.active a {
-  color: var(color-neutral-1);
+  color: var(--color-neutral-1);
   border-bottom: 3px solid var(--color-primary-4);
 }
 
