--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -69,7 +69,7 @@ section {
   font-size: 1.25rem;
   border-radius: 10px;
   text-decoration: none;
-  color: var(color-neutral-0);
+  color: var(--color-neutral-1);
   box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
 }
